<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".login_activity">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent">

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="match_parent"
			android:layout_height="match_parent" >


			<RelativeLayout android:id="@+id/group_19"
				android:layout_marginTop="407dp"
				android:layout_marginStart="25dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>


				<TextView
					android:id="@+id/rectangle_21"
					android:layout_width="314dp"
					android:layout_height="62dp"
					android:layout_marginStart="-1dp"
					android:layout_marginTop="-1dp"
					android:background="@drawable/rectangle_21_shape" />

				<RelativeLayout android:id="@+id/material_symbols_light_mail_outline"
					android:layout_marginTop="16dp"
					android:layout_marginStart="8dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>



					<ImageView android:id="@+id/vector"
						android:src="@drawable/vector"
						android:contentDescription="vector"
						 android:layout_marginStart="3.88dp"
						android:layout_marginTop="6.25dp"
						android:layout_width="23.25dp"
						android:layout_height="17.5dp" />

				</RelativeLayout>

			</RelativeLayout>


			<RelativeLayout android:id="@+id/group_20"
				android:layout_marginTop="512dp"
				android:layout_marginStart="25dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View android:id="@+id/_bg__group_20_ek1"
					android:background="@drawable/_bg__group_20_ek1_shape"
					 android:layout_marginStart="-25dp"
					android:layout_marginTop="-512dp"
					android:layout_width="314dp"
					android:layout_height="62dp" />

				<View   android:id="@+id/rectangle_25"
					android:background="@drawable/rectangle_25_shape"
					 android:layout_marginStart="-1dp"
					android:layout_marginTop="-1dp"
					android:layout_width="314dp"
					android:layout_height="62dp" />


				<RelativeLayout android:id="@+id/ph_eye_thin"
					android:layout_marginTop="16dp"
					android:layout_marginStart="274dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>



					<ImageView android:id="@+id/vector_ek1"
						android:src="@drawable/vector_ek1"
						android:contentDescription="vector_ek1"
						 android:layout_marginStart="1.45dp"
						android:layout_marginTop="6.09dp"
						android:layout_width="28.09dp"
						android:layout_height="17.81dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/arcticons_password"
					android:layout_marginTop="16dp"
					android:layout_marginStart="8dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>


					<ImageView android:id="@+id/vector_ek2"
						android:src="@drawable/vector_ek2"
						android:contentDescription="vector_ek2"
						 android:layout_marginStart="12.4dp"
						android:layout_marginTop="14.8dp"
						android:layout_width="5.22dp"
						android:layout_height="7.7dp" />

					<ImageView android:id="@+id/vector_ek3"
						android:src="@drawable/vector_ek3"
						android:contentDescription="vector_ek3"
						 android:layout_marginStart="3.77dp"
						android:layout_marginTop="10.11dp"
						android:layout_width="22.46dp"
						android:layout_height="17.08dp" />

					<ImageView android:id="@+id/vector_ek4"
						android:src="@drawable/vector_ek4"
						android:contentDescription="vector_ek4"
						 android:layout_marginStart="7.62dp"
						android:layout_marginTop="1.81dp"
						android:layout_width="14.77dp"
						android:layout_height="9.29dp" />

				</RelativeLayout>

			</RelativeLayout>


			<RelativeLayout android:id="@+id/group_21"
				android:layout_marginTop="620dp"
				android:layout_marginStart="25dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg___group_21_ek1"
					android:background="@drawable/_bg___group_21_ek1_shape"
					 android:layout_marginStart="-25dp"
					android:layout_marginTop="-620dp"
					android:layout_width="314dp"
					android:layout_height="47dp" />

				<View   android:id="@+id/rectangle_23"
					android:background="@drawable/rectangle_23_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="314dp"
					android:layout_height="47dp" />

				<TextView android:id="@+id/login"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="16sp"
					android:textColor="@color/_bg__login_color"
					android:layout_marginLeft="56dp"
					android:layout_marginTop="6dp"
					android:layout_width="203dp"
					android:layout_height="39.6dp"
					android:text="@string/login_string"
					 />

			</RelativeLayout>

			<TextView android:id="@+id/email"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="12sp"
				android:textColor="@color/_bg__group_19_ek1_color"
				android:layout_marginLeft="9dp"
				android:layout_marginTop="383dp"
				android:layout_width="66.2dp"
				android:layout_height="23.2dp"
				android:text="@string/email_string"
				 />

			<TextView
				android:id="@+id/segera_lihat_resep_makananmu_hari_ini__let_s_go_healthly"
				android:layout_width="297dp"
				android:layout_height="wrap_content"
				android:layout_below="@+id/food_health_high_resolution_logo_transparent_1"
				android:layout_marginLeft="26dp"
				android:layout_marginTop="72dp"
				android:text="@string/segera_lihat_resep_makananmu_hari_ini__let_s_go_healthly_string"
				android:textColor="@color/_bg__group_19_ek1_color"
				android:textSize="20sp" />

			<TextView
				android:id="@+id/enter_your_account"
				android:layout_width="143dp"
				android:layout_height="wrap_content"
				android:layout_below="@+id/segera_lihat_resep_makananmu_hari_ini__let_s_go_healthly"
				android:layout_gravity="center_horizontal|center"
				android:layout_marginLeft="23dp"
				android:layout_marginTop="20dp"
				android:gravity="center"
				android:text="@string/enter_your_account_string"
				android:textColor="@color/_bg__group_19_ek1_color"
				android:textSize="15sp" />

			<TextView
				android:id="@+id/_not_have_an_account___click_here"
				android:layout_width="311.2dp"
				android:layout_height="23.2dp"
				android:layout_below="@+id/group_21"
				android:layout_gravity="center_horizontal|center"
				android:layout_marginLeft="24dp"
				android:layout_marginTop="45dp"
				android:gravity="center"
				android:text="@string/_not_have_an_account___click_here_string"
				android:textColor="@color/_bg__group_19_ek1_color"
				android:textSize="12sp" />

			<TextView android:id="@+id/password"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="12sp"
				android:textColor="@color/_bg__group_19_ek1_color"
				android:layout_marginLeft="10dp"
				android:layout_marginTop="488dp"
				android:layout_width="91.2dp"
				android:layout_height="23.2dp"
				android:text="@string/password_string"
				 />


			<ImageView
				android:id="@+id/food_health_high_resolution_logo_transparent_1"
				android:layout_width="300dp"
				android:layout_height="51.45dp"
				android:layout_marginStart="34dp"
				android:layout_marginTop="122dp"
				android:contentDescription="food_health_high_resolution_logo_transparent_1"
				android:src="@drawable/food_health_high_resolution_logo_transparent_1" />

			<RelativeLayout android:id="@+id/group_18"
				android:layout_marginTop="-27dp"
				android:layout_marginStart="-67dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/ellipse_13"
					android:background="@drawable/ellipse_13_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="158dp"
					android:layout_height="145dp" />

				<View   android:id="@+id/ellipse_12"
					android:background="@drawable/ellipse_12_shape"
					 android:layout_marginStart="16dp"
					android:layout_marginTop="99dp"
					android:layout_width="71dp"
					android:layout_height="71dp" />

			</RelativeLayout>


			<RelativeLayout android:id="@+id/group_17"
				android:layout_marginTop="175dp"
				android:layout_marginStart="-10dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__group_17_ek1"
					android:background="@drawable/_bg__group_17_ek1_shape"
					 android:layout_marginStart="-314dp"
					android:layout_marginTop="-175dp"
					android:layout_width="109dp"
					android:layout_height="122dp" />

			</RelativeLayout>

			<View
				android:id="@+id/ellipse_14"
				android:layout_width="109dp"
				android:layout_height="104dp"
				android:layout_above="@+id/group_19"
				android:layout_alignEnd="@+id/segera_lihat_resep_makananmu_hari_ini__let_s_go_healthly"
				android:layout_marginTop="0dp"
				android:layout_marginEnd="-120dp"
				android:layout_marginBottom="-390dp"
				android:background="@drawable/ellipse_14_shape" />

			<View
				android:id="@+id/ellipse_15"
				android:layout_width="42dp"
				android:layout_height="42dp"
				android:layout_alignEnd="@+id/segera_lihat_resep_makananmu_hari_ini__let_s_go_healthly"
				android:layout_alignBottom="@+id/enter_your_account"
				android:layout_marginStart="180dp"
				android:layout_marginEnd="-70dp"
				android:layout_marginBottom="25dp"
				android:layout_toEndOf="@+id/enter_your_account"
				android:background="@drawable/ellipse_15_shape" />

		</RelativeLayout>

	</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>